# 2025-Data-24100

./: .gitignore  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
assignments/: prelims.md  regrade_policy.md
class_notes/: 01_terminal_cmd_line_shell.md  02_more_shell_and_env.md  03_docker.md  04_docker_git_expectations.md  05_docker_make.md  06_flask_1.md  07_decorators.md  08_flask_soc.md  09_static_analysis.md  11_sqlite.md  12_mgmt_and_post.md  13_more_crud.md  14_logging_project_issues.md  15_autodocs.md  16_testing.md  17_testing_2.md
docs/: admin.md  prequisites.md  prerequisites.md
example_data/: frankenstein.txt
grading_scripts/: checkout.sh  flask_autograder.py  full_reset.sh  part_1_build_run.sh
lecture_examples/03_docker_art/: Dockerfile  Dockerfile_complete  print_date.py  pyproject.toml
lecture_examples/05_docker_make_flask/: Dockerfile  Dockerfile_complete  Makefile  app.py  (+5 more)
lesson_plan/: finals_week.md  week_1.md  week_2.md  week_3.md  week_4.md  week_5.md  week_6.md  week_7.md  week_8.md  week_9.md
project_assignments/: part_0.md  part_1.md  part_1_rubric.md  part_2.md  part_2_rubric.md  part_3.md  part_3_rubric.md  part_4.md  part_4_rubric.md  part_5.md  part_5_rubric.md  part_6.md  part_6_rubric.md  part_7.md  part_7_rubric.md  part_8.md  part_8_rubric.md  pre-commit-config.yaml  pyproject.toml
quiz/: FinalExam.tex  FinalExamAK.md  Quiz1AK.md  Quiz2AK.md  Quiz3AK.md  Quiz4AK.md  quiz1A.tex  quiz1AK.md  quiz1B.tex  quiz2A.tex  quiz2AK.md  quiz2B.tex  quiz3A.tex  quiz4A.tex  quiz5A.tex  quiz5AK.md  quiz6A.tex  quiz6AK.md
(+70 files in other folders)
